# pyksnk

./: LICENSE  MANIFEST.in  README.md  setup.cfg
docker/default/: Dockerfile
examples/pyksnk/mordict/: check_duplicated_phon_gloss.py  filter_sfx.py
pyksnk/: __init__.py  __main__.py  cli.py  crule.py  crules.py  morcomb.lark  morcomb.py  mordict.lark  mordict.py
