[metadata]
name = pyksnk
version = attr:pyksnk.__version__
license = "MIT License"
classifiers =
    License :: OSI Approved :: MIT License
    Programming Langugae :: Python :: 3
    Programming Language :: Python :: 3.7

author = "T. N. Hayashi"
author_email = "net@hayashi-lin.net"
description = "Management tools of CHILDES MOR dictionaries"
keywords = "CHILDES MOR"

[options]
packages = find:
# include_package_data = true
install_requires =
    ruamel.yaml
    click
    pandas
    lark-parser
    attrs

[options.entry_points]
console_scripts =
    pyksnk = pyksnk.cli:cmd_main